[build-system]
requires = ["setuptools>=59.0"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
test-command = "python -m bitalign.tests"

[project]
name = "bitalign"
version = "0.3.0"
authors = [
  { name="Dennis Sweeney", email="sweeney.427@osu.edu" },
]
description = "Shift some bits and see how they line up best."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sweeneyde/bitalign"
"Bug Tracker" = "https://github.com/sweeneyde/bitalign"
